--- a/styles/style.css
+++ b/styles/style.css
@@ -1,121 +1,96 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  background-color: #ebebeb;
-}
-
-.contact {
+.firstLine {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
 }
 
-.avatar {
+.secondLine {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
-  list-style: none;
-  margin: 20px;
-  padding: 0;
-  width: 650px;
-  height: 300px;
-  font-size: 25px;
-  font-family: "Times New Roman";
-  background-color: white;
-  border-radius: 20px;
-  -webkit-box-shadow: 0 0 2px;
-          box-shadow: 0 0 2px;
 }
 
-.login {
-  padding: 10px;
-  font-size: 35px;
-  display: block;
+.thirdLine {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.first {
   position: relative;
-  bottom: 30px;
-  margin: 0;
-  padding: 0;
-  width: 270px;
-  height: 125px;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
 }
 
-.image {
+.second {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.third {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.fours {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.fives {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.sixes {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.sevens {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.eights {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.nines {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+}
+
+.status {
   width: 150px;
   height: 150px;
   position: relative;
-  left: 160px;
+  left: 215px;
+  border: 4px double black;
+  margin: 20px;
 }
 
-.contributions {
-  padding-top: 62px;
-  font-size: 25px;
-}
-
-div.message {
-  height: 50px;
-  width: 150px;
+.clear {
   position: relative;
-  top: 100px;
-  right: 35%;
-  border-radius: 15px;
-  -webkit-box-shadow: 0 0 5px #888888;
-          box-shadow: 0 0 5px #888888;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-p.message {
-  position: relative;
-}
-
-div.selector select {
-  display: block;
-  width: 300px;
-  height: 50px;
-  font-size: 25px;
-  position: relative;
-  left: 45%;
-  color: #17bdff;
-  border-radius: 15px;
+  left: 265px;
+  margin: 20px;
 }
 /*# sourceMappingURL=style.css.map */
